# allstacks-mcp-server

./: .gitignore  ENDPOINT_VERIFICATION.md  FILTERED_ENDPOINTS.md  PUBLISHING.md  PUBLISHING_CHECKLIST.md  README.md  SECURITY.md  TOOLS_MAPPING.md  build-mcpb.sh  main.py  mcp-install-definition-example.json  mcp.json  package.json  pyproject.toml  server.json  server.py
.github/workflows/: publish-mcp.yml
allstacks_mcp/: __init__.py  __main__.py  client.py  metrics_v2_payload.py  server.py
allstacks_mcp/tools/: __init__.py  ai_analytics.py  alerts.py  attainment.py  dashboards.py  employee.py  forecasting.py  labels.py  metrics.py  milestones.py  org_projects.py  portfolio.py  portfolio_analytics.py  risk_management.py  service_items.py  users_teams.py  work_bundles.py
tests/: test_metrics_v2_post_body.py
