[project]
name = "allstacks-mcp"
version = "0.1.0"
description = "MCP server for Allstacks API - provides AI-ready interface to Allstacks metrics, projects, and analytics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.7.1",
]

[tool.mcp]
name = "com.allstacks/allstacks-mcp"
